--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,8 @@ DB_NAME=auth-db
 DB_PASSWORD=password123
 DB_PORT=5432
 JWT_SECRET=your_jwt_secret_key
+
+# ---- Cloudinary Configuration ----
+CLOUDINARY_CLOUD_NAME=dg2bus9eq
+CLOUDINARY_API_KEY=561997663751764
+CLOUDINARY_API_SECRET=_jUoi2acVyfyYCgxsb8XOVPAQus
