--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
-CLOUDINARY_CLOUD_NAME=dg2bus9eq
-CLOUDINARY_API_KEY=561997663751764
-CLOUDINARY_API_SECRET=_jUoi2acVyfyYCgxsb8XOVPAQus
+NODE_ENV=production
+PORT=8000
+
+# Database
+DB_USER=postgres
+DB_HOST=mi-servidor-produccion
+DB_NAME=auth-db
+DB_PASSWORD=TuDBPasswordSeguro123!
+DB_PORT=5432
+
+# JWT
+JWT_SECRET=V9r$8kLq#P2mZ6!sD4hW
+JWT_REFRESH_SECRET=T7p@3xRj%N1vF5^bQ8uY
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=mi_cloud_name
+CLOUDINARY_API_KEY=mi_api_key
+CLOUDINARY_API_SECRET=mi_api_secret
