--- a/.env.dev
+++ b/.env.dev
@@ -1,13 +1,18 @@
 NODE_ENV=development
 PORT=3000
+
+# Database (local)
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=auth-db
 DB_PASSWORD=password123
 DB_PORT=5432
-JWT_SECRET=your_jwt_secret_key
 
-# ---- Cloudinary Configuration ----
+# JWT (para pruebas)
+JWT_SECRET=devSuperSecreto123
+JWT_REFRESH_SECRET=devRefreshSecreto456
+
+# Cloudinary (para pruebas)
 CLOUDINARY_CLOUD_NAME=dg2bus9eq
 CLOUDINARY_API_KEY=561997663751764
 CLOUDINARY_API_SECRET=_jUoi2acVyfyYCgxsb8XOVPAQus
