--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node --watch --env-file .env.dev index.js",
     "start": "node --env-file .env index.js",
-    "seed": "node --env-file .env.dev ./scripts/seed"
+    "seed": "node --env-file .env.dev ./scripts/seedtest"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,13 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "3.0.2",
     "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.1",
     "multer": "^2.0.2",
