--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node --watch --env-file .env.dev index.js",
     "start": "node --env-file .env index.js",
-    "seed": "node --env-file .env.dev ./scripts/seedtest"
+    "seed": "node --env-file .env.dev ./scripts/seed"
   },
   "keywords": [],
   "author": "",
