--- a/.env
+++ b/.env
@@ -2,11 +2,12 @@ NODE_ENV=production
 PORT=8000
 
 # Database
-DB_USER=postgres
-DB_HOST=mi-servidor-produccion
-DB_NAME=auth-db
-DB_PASSWORD=TuDBPasswordSeguro123!
-DB_PORT=5432
+ DB_HOST=db.mtojyssvhmldjztulvwo.supabase.co
+ DB_PORT=5432
+ DB_USER=postgres
+ DB_PASSWORD=LaVozdeCristo_11
+ DB_NAME=postgres
+ SSL=true
 
 # JWT
 JWT_SECRET=V9r$8kLq#P2mZ6!sD4hW
@@ -16,3 +17,15 @@ JWT_REFRESH_SECRET=T7p@3xRj%N1vF5^bQ8uY
 CLOUDINARY_CLOUD_NAME=dg2bus9eq
 CLOUDINARY_API_KEY=561997663751764
 CLOUDINARY_API_SECRET=_jUoi2acVyfyYCgxsb8XOVPAQus
+
+# 🆕 Email Configuration (Gmail como ejemplo)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=cooper17john@gmail.com
+EMAIL_PASSWORD=hjgzzxrhknnfjxsa
+EMAIL_FROM_NAME=Colegio La Voz de Cristo
+EMAIL_FROM_ADDRESS=lavozdecristohighschool@gmail.com
+
+# URL del frontend (para enlaces en correos)
+FRONTEND_URL=http://localhost:3001
