test deploy render fin

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=cooper17john@gmail.com
 EMAIL_PASSWORD=hjgzzxrhknnfjxsa
-EMAIL_FROM_NAME=Colegio La Voz de Cristo
+EMAIL_FROM_NAME=Unidad Educativa Particular La Voz de Cristo
 EMAIL_FROM_ADDRESS=lavozdecristohighschool@gmail.com
 
 # URL del frontend (para enlaces en correos)
